--- a/styleforside.css
+++ b/styleforside.css
@@ -15,21 +15,27 @@ body {
   object-fit: cover;    /* Fylder hele skærmen uden at strække */
   z-index: -1;          /* Sørger for at alt andet ligger ovenpå */
 }
-#forside img {
+#stjernensliv {
   position: absolute;
   top: 30%;
   left: 50%;
   transform: translateX(-50%);
   width: 60%;
+  opacity: 0;
+  transition: opacity 3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 #forside a{
   position: absolute;
-  top: 70%;
+  top: 75%;
   left: 50%;
   transform: translateX(-50%);
   background-color: black;
   color:white;
   border: 1px solid white;
   cursor: pointer;
-  padding: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 40px;
+  padding-right: 40px;
+  text-decoration: none;
 }
